# ETH_OX

./: .gitignore  README.md  package-lock.json
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  run.sh  test_agent.py  test_analytics.py  test_db.py  test_gmx.py  test_monitoring.py  test_notifications.py  test_price_feed.py  test_trading.py  test_trading_advanced.py
backend/app/: main.py
backend/app/api/ai_agent/: routes.py
backend/app/api/monitoring/: routes.py
backend/app/api/positions/: routes.py
backend/app/core/ai/: agent.py  config.py
backend/app/core/analytics/: service.py
backend/app/core/db/: models.py  service.py
backend/app/core/gmx/: client.py  config.py
backend/app/core/gmx/abis/: position_router.json  reader.json  router.json  vault.json
backend/app/core/monitoring/: service.py
backend/app/core/notifications/: service.py
backend/app/core/price/: coingecko.py
backend/app/core/price_feed/: coingecko.py  config.py
backend/app/core/trading/: order_manager.py  position_manager.py  service.py
blockchain/contracts/: IGMXRouter.ts
frontend/: .env.example  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: AIChat.tsx  AIRecommendations.tsx  DeFiPositions.tsx  DefiPosition.tsx  Navbar.tsx  TradeExecutionPanel.tsx  TransactionHistory.tsx  TransactionStatus.tsx  WalletConnect.tsx
frontend/hooks/: use-chat.ts  use-positions.ts  use-websocket.ts
frontend/types/: chat.ts
(+8 files in other folders)
